--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 *{
     margin: 0; padding: 0;
-    
+    font-family: Charlie Display, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Noto Sans, Ubuntu, Droid Sans, Helvetica Neue, sans-serif;
 }
 body{
     background-color: #f4f5f7;
@@ -162,4 +162,8 @@ body{
     white-space: nowrap;
     height: 35px;
 
+}
+/* ---footer---- */
+.footer{
+    margin: 20px;
 }
